# low_resource_prompting

./: .gitignore  pyproject.toml
low-resource-prompting/: train.py
low-resource-prompting/configs/: train.yaml
low-resource-prompting/configs/data/: dataloader.yaml
low-resource-prompting/data/: mnli_dataloader.py
low_resource_prompting/: train.py
low_resource_prompting/configs/: train.yaml
low_resource_prompting/configs/data/: dataloader.yaml
low_resource_prompting/configs/model/: model.yaml
low_resource_prompting/configs/trainer/: trainer.yaml
low_resource_prompting/data/: mnli_dataloader.py
low_resource_prompting/model/: bert.py
