[tool.poetry]
name = "low_resource_prompting"
version = "0.1.0"
description = ""
authors = ["Asit"]

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.1.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
hydra-core = "^1.3.2"
transformers = "^4.34.1"
datasets = "^2.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
